k8s/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: public
  rules:
  - host: localhost
    http:
      paths:
      - path: /ingress/status
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80

      - path: /flask
        pathType: Prefix
        backend:
          service:
            name: flask-backend
            port:
              number: 80

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: flask-backend
            port:
              number: 80

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
